[package]
name = "tokio-timer"
version = "0.1.2"
authors = ["Carl Lerche <me@carllerche.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/tokio-rs/tokio-timer"
homepage = "https://github.com/tokio-rs/tokio-timer"
documentation = "https://docs.rs/tokio-timer"
description = """
Timer facilities for Tokio
"""

[dependencies]
futures = "0.2.0-alpha"
slab = "0.3.0"
