[package]
name = "tokio-timer"
version = "0.2.0"
authors = ["Carl Lerche <me@carllerche.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/asonix/tokio-timer"
homepage = "https://github.com/tokio-rs/tokio-timer"
description = """
Timer facilities for Tokio
"""

[dependencies]
futures-preview = "0.2"
slab = "0.3.0"
